# rust-admin-api

./: .gitignore  Cargo.toml  README.md  config.example.toml  flake.nix
nix/: module.nix
src/: config.rs  db.rs  lib.rs  main.rs
src/admin/: forms.rs  handlers.rs  mod.rs  templates.rs
src/auth/: jwt.rs  mod.rs  session.rs  verifier.rs
src/proxy/: gateway.rs  mod.rs  router.rs  status.rs
static/: style.css  theme.js
templates/: dashboard.html  login.html
tests/: integration.rs
